--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -84,6 +84,7 @@ CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS=y
 CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
 CONFIG_MSM_BOOT_STATS=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_SEC_PM=y
 CONFIG_SEC_PM_DEBUG=y
@@ -101,14 +102,30 @@ CONFIG_COMPACTION=y
 CONFIG_ENABLE_VMALLOC_SAVING=y
 CONFIG_CC_STACKPROTECTOR=y
 CONFIG_USE_OF=y
+CONFIG_EXPERIMENTAL=y
+# CPU Frequency scaling
+#
+CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
 CONFIG_CPU_FREQ=y
+# CONFIG_SEC_DVFS is not set
+CONFIG_CPU_FREQ_TABLE=y
+CONFIG_CPU_FREQ_STAT=y
+# CONFIG_CPU_FREQ_STAT_DETAILS is not set
+CONFIG_CPU_FREQ_LIMIT=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
+CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_HARDLIMIT=y
 CONFIG_CPU_BOOST=y
-
+# PowerSuspend
+CONFIG_POWERSUSPEND=y
+# CONFIG_POWERSUSPEND_DEBUG is not set
 #Enable CPUFREQ LIMIT.
 CONFIG_CPU_FREQ_LIMIT=y
 CONFIG_CPU_FREQ_LIMIT_USERSPACE=y
@@ -504,6 +521,10 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+###
+CONFIG_ANDROID_BINDER_IPC_32BIT=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+###
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_RAM_CONSOLE=y
