Update prctl and seccomp for O Ported from bacon msm8974 kernel

--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -552,7 +552,7 @@ CONFIG_EXT3_FS=y
 CONFIG_EXT4_FS=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
-CONFIG_SDCARD_FS=y
+# CONFIG_SDCARD_FS is not set
 CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_NLS_CODEPAGE_437=y
@@ -655,11 +655,4 @@ CONFIG_SEC_SMART_MGR_RUNQUEUE_AVG=y
 
 CONFIG_CRYPTO_DEV_QCEDEV=y
 
-CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
-CONFIG_F2FS_FS_XATTR=y
-CONFIG_F2FS_FS_POSIX_ACL=y
-CONFIG_F2FS_FS_SECURITY=y
-
 CONFIG_CONFIGFS_FS=y
-CONFIG_SDCARD_FS=y
