--- a/arch/arm/configs/msm8974_sec_hlte_eur_defconfig
+++ b/arch/arm/configs/msm8974_sec_hlte_eur_defconfig
@@ -1,4 +1,9 @@
 # from msm8974_sec_defconfig
+CONFIG_LOCALVERSION="-Gzosp_hlte_v1"
+CONFIG_LOCALVERSION_AUTO=n
+CONFIG_SECCOMP=y
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
+CONFIG_SECCOMP_FILTER=y
 CONFIG_AUDIT=y
 # CONFIG_MSM_PIL_PRONTO is not set
 CONFIG_NET_KEY=y
